[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodus-extensions"
version = "0.1.0"
description = "Typed, versioned, sandboxed extension loading: manifest validation, hook lifecycle, sandbox runners"
authors = [{ name = "Shawn Knight" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-extensions"
Repository = "https://github.com/Masterplanner25/nodus-extensions"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_extensions*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
